--- a/css/style.css
+++ b/css/style.css
@@ -1775,6 +1775,16 @@ button[type="submit"]:hover {
     flex-wrap: wrap;
 }
 
+.paginacion-fichados {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+
 .btn-pagina {
     padding: 10px 15px;
     font-size: 16px;
