--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,9 @@ body {
     border-radius: 6px;
     font-weight: bold;
     margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
     transition: opacity 0.5s ease;
     box-sizing: border-box;
 }
