--- a/css/style.css
+++ b/css/style.css
@@ -246,40 +246,55 @@ body {
     border: 2px solid #ccc;
     border-radius: 8px;
     font-size: 16px;
+    box-sizing: border-box;
 }
 
 /* Contenedor para input de contraseña con icono de ojo */
 .password-input-wrapper {
     position: relative;
     display: inline-block;
-    width: 100%;
+    width: 310px;
 }
 
 .password-input-wrapper input {
-    width: 100%;
-    padding-right: 40px;
+    width: 310px;
+    padding-right: 35px;
+    box-sizing: border-box;
+    margin-top: 5px;
 }
 
 .password-toggle-icon {
     position: absolute;
-    right: 10px;
+    right: 8px;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-    font-size: 18px;
-    color: #666;
     user-select: none;
-    z-index: 1;
-    padding: 5px;
+    z-index: 10;
+    width: 24px;
+    height: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    background: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
 }
 
-.password-toggle-icon:hover {
-    color: #333;
+.password-toggle-icon svg {
+    width: 20px;
+    height: 20px;
+    fill: #666;
+    transition: fill 0.2s;
+}
+
+.password-toggle-icon:hover svg {
+    fill: #333;
+}
+
+.password-toggle-icon.visible svg {
+    fill: #0b0b63;
 }
 
 /* Ajuste para inputs de password en modales */
@@ -289,6 +304,8 @@ body {
 
 .modal-content .password-input-wrapper input {
     width: 100%;
+    padding-right: 35px;
+    box-sizing: border-box;
 }
 
 button[type="submit"] {
