--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,8 @@ body {
 }
 
 .input-group input {
-    width: 310px;
+    width: 100%;
+    max-width: 280px;
     padding: 10px;
     margin-top: 5px;
     border: 2px solid #ccc;
@@ -253,11 +254,13 @@ body {
 .password-input-wrapper {
     position: relative;
     display: inline-block;
-    width: 310px;
+    width: 100%;
+    max-width: 280px;
 }
 
 .password-input-wrapper input {
-    width: 310px;
+    width: 100%;
+    max-width: 280px;
     padding-right: 35px;
     box-sizing: border-box;
     margin-top: 5px;
