--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,10 @@ body {
 /* Contenedor para input de contraseña con icono de ojo */
 .password-input-wrapper {
     position: relative;
-    display: inline-block;
+    display: block;
     width: 100%;
     max-width: 280px;
+    margin-top: 5px;
 }
 
 .password-input-wrapper input {
@@ -263,7 +264,7 @@ body {
     max-width: 280px;
     padding-right: 35px;
     box-sizing: border-box;
-    margin-top: 5px;
+    margin-top: 0;
 }
 
 .password-toggle-icon {
