--- a/css/style.css
+++ b/css/style.css
@@ -232,18 +232,20 @@ body {
 .input-group {
     margin-bottom: 15px;
     text-align: left;
+    width: 100%;
 }
 
 .input-group label {
     font-weight: bold;
     color: #000;
+    display: block;
+    margin-bottom: 5px;
 }
 
 .input-group input {
     width: 100%;
-    max-width: 280px;
     padding: 10px;
-    margin-top: 5px;
+    margin-top: 0;
     border: 2px solid #ccc;
     border-radius: 8px;
     font-size: 16px;
@@ -255,13 +257,11 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    max-width: 280px;
-    margin-top: 5px;
+    margin-top: 0;
 }
 
 .password-input-wrapper input {
     width: 100%;
-    max-width: 280px;
     padding-right: 35px;
     box-sizing: border-box;
     margin-top: 0;
