--- a/css/style.css
+++ b/css/style.css
@@ -2368,7 +2368,7 @@ button[type="submit"]:hover {
 }
 
 /* ================================
-   ESTILOS PARA REGISTRADOR BARRAS
+   ESTILOS PARA REGISTRADOR BARRASS
    ================================ */
 
 /* Container principal para registrador de barras */
